# hole_toolpath_planner_py

./: LICENSE  README.md  package.xml  setup.cfg  setup.py
cfg/: default_params.yaml
hole_toolpath_planner_py/: __init__.py  detection.py  detector_node.py
launch/: detector_py.launch.py
resource/: hole_toolpath_planner_py
