<?xml version="1.0"?>
<package format="3">
  <name>hole_toolpath_planner_py</name>
  <version>0.1.0</version>
  <description>Python implementation of the hole toolpath planner using Open3D.</description>

  <maintainer email="snw13@example.com">snw13</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>hole_toolpath_planner</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-open3d</exec_depend>

  <test_depend>ament_pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
